<resources>
    <string name="app_name">Meds</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Phone number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">"Don't have and account? Sign up"</string>

    <string name="title_activity_login">"Sign in"</string>
    <string name="prompt_phone">"Phone Number"</string>
    <string name="verification_failed">"Verification failed"</string>
    <string name="signin_failed">"Sign in failed"</string>
    <string name="forgetpassword">"Forget password"</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
